tests/asm-link/fail/rgbasm.err
error: oops
   ╭─[ test.asm:1:1 ]
   │
 1 │ fail "oops"
   │ ──┬─  
   │   ╰─── assembly aborted due to this
───╯
1 error generated.
